--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,16 +11,16 @@ source:
   sha256: dc057cedbcc0bfcd3aafdc3e04aca9c428f08d6fa1d679778d64be75980462a5
 
 build:
-  number: 0
+  number: 1
   skip: True  # [win] 
 
 requirements:
   build:
-    - libnetcdf
+    - libnetcdf 4.4.*
     - g2clib
     - gcc
   run:
-    - libnetcdf
+    - libnetcdf 4.4.*
     - g2clib
     - libgcc
 
