--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,13 +17,14 @@ requirements:
   build:
     - libnetcdf >=4.5
     - g2clib
-    - gcc [osx]
+    - clang_osx-64 [osx]
+    - gfortran_osx-64 [osx]
     - gcc_linux-64 [linux]
     - gfortran_linux-64 [linux]
   run:
     - libnetcdf >=4.5
     - g2clib
-    - gcc [osx]
+    - clang_osx-64 [osx]
     - libgcc [linux]
 
 test:
