--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "libdrs" %}
-{% set version = "3.0.1" %}
+{% set version = "3.0" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://github.com/CDAT/libdrs/archive/v3.0.1.tar.gz
-  sha256: df14b26ce57bb71722f48778882b3acf58dff435114fbbf61a3d2e2654c6d851
+  url: https://github.com/UV-CDAT/libdrs/archive/v3.0.tar.gz
+  sha256: b587c06b13844e7d21ab43017da06175b0d344763e40c44b4593ffb766104388
 
 build:
   number: 0
@@ -15,17 +15,13 @@ build:
 
 requirements:
   build:
-    - libnetcdf >=4.5
+    - libnetcdf 4.4.*
     - g2clib
-    - clang_osx-64  # [osx]
-    - gfortran_osx-64  # [osx]
-    - gcc_linux-64  # [linux]
-    - gfortran_linux-64  # [linux]
+    - gcc
   run:
-    - libnetcdf >=4.5
+    - libnetcdf 4.4.*
     - g2clib
-    - clang_osx-64  # [osx]
-    - libgcc  # [linux]
+    - libgcc
 
 test:
   commands:
