--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,17 +15,14 @@ build:
 
 requirements:
   build:
-    - libnetcdf >=4.5
+    - {{ compiler('c') }}
+    - {{ compiler('fortran') }}
+  host:
+    - libnetcdf
     - g2clib
-    - clang_osx-64  # [osx]
-    - gfortran_osx-64  # [osx]
-    - gcc_linux-64  # [linux]
-    - gfortran_linux-64  # [linux]
   run:
-    - libnetcdf >=4.5
+    - libnetcdf
     - g2clib
-    - clang_osx-64  # [osx]
-    - libgcc  # [linux]
 
 test:
   commands:
