--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: df14b26ce57bb71722f48778882b3acf58dff435114fbbf61a3d2e2654c6d851
 
 build:
-  number: 2
+  number: 3
   skip: True  # [win] 
 
 requirements:
@@ -18,10 +18,12 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('fortran') }}
   host:
-    - libnetcdf >=4.5
+    - {{ compiler('c') }}
+    - {{ compiler('fortran') }}
+    - libnetcdf 
     - g2clib
   run:
-    - libnetcdf >=4.5
+    - libnetcdf 
     - g2clib
 
 test:
