--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,11 +15,9 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('fortran') }}
+    - {{ compiler('gcc') }}        # need gcc7 to link library
+    - {{ compiler('gfortran') }}   # (_gmalloc_fortran) issue without gfortran7
   host:
-    - {{ compiler('c') }}
-    - {{ compiler('fortran') }}
     - libnetcdf 
     - g2clib
   run:
