--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,4 +1,9 @@
 c_compiler:
-- toolchain_c
+- gcc
 fortran_compiler:
-- toolchain_fort
+- gfortran
+libnetcdf:
+- '4.6'
+pin_run_as_build:
+  libnetcdf:
+    max_pin: x.x
