MNT: Re-rendered with conda-smithy 3.1.6 and pinning 2018.07.01

--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,9 +1,9 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 c_compiler:
-- toolchain_c
+- gcc
 fortran_compiler:
-- toolchain_fort
+- gfortran
 libnetcdf:
 - '4.6'
 macos_machine:
