remove gcc for osx

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,4 +1,5 @@
 c_compiler:
-  - gcc             # [linux]
+  - gcc             #  [linux]
+  - clang           #  [osx]
 fortran_compiler:
-  - gfortran        # [linux]
+  - gfortran        #  [linux or osx]
