--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,4 +1,15 @@
 c_compiler:
 - toolchain_c
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
+docker_image:
+- condaforge/linux-anvil
 fortran_compiler:
 - toolchain_fort
+libnetcdf:
+- '4.6'
+pin_run_as_build:
+  libnetcdf:
+    max_pin: x.x
