--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -2,9 +2,18 @@ MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 c_compiler:
 - toolchain_c
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 fortran_compiler:
 - toolchain_fort
+libnetcdf:
+- '4.6'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
+pin_run_as_build:
+  libnetcdf:
+    max_pin: x.x
