--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,5 +1,7 @@
 c_compiler:
 - gcc
+c_compiler_version:
+- '7'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -8,8 +10,10 @@ docker_image:
 - condaforge/linux-anvil-comp7
 fortran_compiler:
 - gfortran
+fortran_compiler_version:
+- '7'
 libnetcdf:
-- '4.6'
+- 4.6.2
 pin_run_as_build:
   libnetcdf:
-    max_pin: x.x
+    max_pin: x.x.x
