--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -2,6 +2,8 @@ MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 c_compiler:
 - clang
+c_compiler_version:
+- '4'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -11,11 +13,11 @@ fortran_compiler:
 fortran_compiler_version:
 - '4'
 libnetcdf:
-- '4.6'
+- 4.6.2
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
 pin_run_as_build:
   libnetcdf:
-    max_pin: x.x
+    max_pin: x.x.x
