--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}        # need gcc7 to link library
+    - {{ compiler('c') }}         # need gcc7 to link library
     - {{ compiler('fortran') }}   # (_gmalloc_fortran) issue without gfortran7
   host:
     - libnetcdf 
@@ -38,9 +38,7 @@ about:
     It is oriented toward use with models generating very large datasets on
     supercomputers, as well as with graphics workstations used for analysis and
     display of smaller subsets of data.
-  dev_url: http://github.com/UV-CDAT/libdrs
-
-
+  dev_url: http://github.com/CDAT/libdrs
 
 extra:
   recipe-maintainers:
