--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 90e10191116a78228739276078a0ddcf0d6458516f192e9e79fecb2beeceb3fa
 
 build:
-  number: 7
+  number: 8
   skip: True  # [win] 
 
 requirements:
@@ -18,10 +18,10 @@ requirements:
     - {{ compiler('c') }}         # need gcc7 to link library
     - {{ compiler('fortran') }}   # (_gmalloc_fortran) issue without gfortran7
   host:
-    - libnetcdf >=4.6.2,<4.6.3.0a0
+    - libnetcdf
     - g2clib
   run:
-    - libnetcdf >=4.6.2,<4.6.3.0a0
+    - libnetcdf
     - g2clib
 
 test:
