--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -12,3 +12,8 @@ fortran_compiler:
 - gfortran
 fortran_compiler_version:
 - '7'
+libnetcdf:
+- 4.7.1
+pin_run_as_build:
+  libnetcdf:
+    max_pin: x.x.x
