--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,14 +1,6 @@
 {% set name = "libdrs" %}
 {% set version = "3.1.2" %}
-{% set build = 11 %}
-
-# ensure mpi is defined (needed for conda-smithy recipe-lint)
-{% set mpi = mpi or 'nompi' %}
-
-{% if mpi == 'nompi' %}
-# prioritize nompi variant
-{% set build = build + 100 %}
-{% endif %}
+{% set build = 112 %}
 
 package:
   name: {{ name|lower }}
@@ -22,29 +14,16 @@ build:
   number: {{ build }}
   skip: True  # [win]
 
-  # add build string so packages can depend on
-  # mpi or nompi variants explicitly:
-  # `libdrs * mpi_mpich_*` for mpich
-  # `libdrs * mpi_*` for any mpi
-  # `libdrs * nompi_*` for no mpi
-
-  {% if mpi != 'nompi' %}
-  {% set mpi_prefix = "mpi_" + mpi %}
-  {% else %}
-  {% set mpi_prefix = "nompi" %}
-  {% endif %}
-  string: "{{ mpi_prefix }}_h{{ PKG_HASH }}_{{ build }}"
-
 requirements:
   build:
     - {{ compiler('c') }}         # need gcc7 to link library
     - {{ compiler('fortran') }}   # (_gmalloc_fortran) issue without gfortran7
   host:
     - libnetcdf
-    - libnetcdf * {{ mpi_prefix }}_*
+    - libnetcdf * nompi_*
     - g2clib
   run:
-    - libnetcdf * {{ mpi_prefix }}_*
+    - libnetcdf
     - g2clib
 
 test:
