--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,8 @@ package:
 source:
   url: https://github.com/CDAT/libdrs/archive/v{{ version }}.tar.gz
   sha256: 90e10191116a78228739276078a0ddcf0d6458516f192e9e79fecb2beeceb3fa
+  patches:
+    - 0001-remove-mtune-option.patch
 
 build:
   number: {{ build }}
