Only remove -lgfortran for cross-compiling

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "libdrs" %}
 {% set version = "3.1.2" %}
-{% set build = 117 %}
+{% set build = 118 %}
 
 package:
   name: {{ name|lower }}
@@ -11,7 +11,7 @@ source:
   sha256: 90e10191116a78228739276078a0ddcf0d6458516f192e9e79fecb2beeceb3fa
   patches:
     - 0001-remove-mtune-option.patch
-    - 0002-remove-lgfortran.patch
+    - 0002-remove-lgfortran.patch  # [linux & (ppc64le | aarch64)]
 
 build:
   number: {{ build }}
