--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,10 +25,10 @@ requirements:
   host:
     - libnetcdf
     - libnetcdf * nompi_*
-    - g2clib
+    - g2clib <1.7.0
   run:
     - libnetcdf
-    - g2clib
+    - g2clib <1.7.0
 
 test:
   commands:
